# epson-inkjet-printer-escpr

./: .gitignore  Makefile.in  bootstrap  compose.yaml  config.h.in  configure  configure.ac  epson-inkjet-printer-escpr.spec
.devcontainer/: devcontainer.json
airprint/: Dockerfile  cups.sh
airprint/avahi/: AirPrint-EPSON_ET-2710_Series.service
debian/: changelog  files  rules  rules.in
lib/: Makefile.in
ppd/: Epson-ET-2710_Series-epson-escpr-en.ppd  Makefile.am  Makefile.in
src/: Makefile.in  libprtX.h  wrapper.c
